# mediator-bot

./: .gitignore  .travis.yml  Makefile  README.md  TODO.md  bob-requirements.txt  pytest.ini  requirements.txt  setup.py  setuppath.sh  test.py  test_requirements.txt  tox.ini
bagfiles/: 2016-11-29-13-13-01.bag  2016-11-29-13-14-08.bag  2016-11-29-19-03-24.bag  speaker_recognition.bag  timenode.bag
docs/: Makefile  conf.py  index.rst
env/: pip-selfcheck.json
env/local/: bin  include  lib
images/: System Diagram.xml  System Overview.xml
mediator_bot/: __init__.py  bot.py  dependencies.rosinstall
mediator_bot/action_response/: CMakeLists.txt  package.xml
mediator_bot/actions/: actionLibrary.py  action_library.py
mediator_bot/ai/: ai_module.py
mediator_bot/common/: bot_module.py
mediator_bot/config/: __init__.py  config.yaml  local.conf  nested_config_parser.py
mediator_bot/hark_msgs/: CMakeLists.txt  package.xml
mediator_bot/hark_preprocessing/: README.md  preprocessing.n  run.sh  (+1 more)
mediator_bot/smach_test/: CMakeLists.txt  package.xml
mediator_bot/smach_test/scripts/: cmd_line_nao.py  mediator_state_machine.py
mediator_bot/speech_speaker_recognition/: CMakeLists.txt  package.xml
mediator_bot/speech_speaker_recognition/msg/: SentenceTranscription.msg  Speaker.msg  StartRecognitionMsg.msg
mediator_bot/speech_speaker_recognition/scripts/: periodic_thread.py  recognition.py
mediator_bot/speech_speaker_recognition/src/: config.py  custom_exceptions.py  locks.py  recognition.py  rpc_dispatcher.py  socket_pool.py  src_stream.py
mediator_bot/speech_speaker_recognition/srv/: StartEnrollment.srv  StartRecognition.srv
models/: .gitignore
notes/: notes.md  response_and_action.md
(+43 files in other folders)
