<?xml version="1.0"?>
<package>
  <name>speech_speaker_recognition</name>
  <version>0.1.0</version>
  <description>The speech_speaker_recognition package</description>

  <maintainer email="patrick.engelbert13@imperial.ac.uk">Patrick Engelbert</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>hark_msgs</run_depend>

  <export>

  </export>
</package>
